cấu trúc lại, thêm Account, team, package type

--- a/Client Web/webMshipper/pages/Accounts/Create.html
+++ b/Client Web/webMshipper/pages/Accounts/Create.html
@@ -27,7 +27,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Họ và tên</label>
+                                        <label>Họ và tên phụ</label>
                                         <input ng-model="lastName" class="form-control" placeholder="Đặng Văn">
                                     </div>
 
