--- a/Client Web/webMshipper/pages/Orders/Create.html
+++ b/Client Web/webMshipper/pages/Orders/Create.html
@@ -110,7 +110,7 @@
                                 <td>{{x._payment_status}}</td>
                                 <td>{{x._note}}</td>
                                 <td align="center">
-                                    <button ng-click="loadMaps(x)" type="button" class="btn btn-info btn-circle"><i
+                                    <button ng-click="loadDetails(x)" type="button" class="btn btn-info btn-circle"><i
                                             class="fa fa-plus-circle"></i></button>
                                 </td>
                             </tr>
