--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -61,8 +61,8 @@
     <script src="../js/thongbao.js"></script>
     <script src="../js/bieudo.js"></script>
 
-    <script src="../js/orders.modal.show.js"></script>
-    <script src="../js/orders.modal.create.js"></script>
+    <script src="../js/Orders/orders.modal.show.js"></script>
+    <script src="../js/Orders/orders.modal.create.js"></script>
 
     <!-- Morris Charts JavaScript -->
     <script src="../vendor/raphael/raphael.min.js"></script>
@@ -76,8 +76,6 @@
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="http://samu.github.io/angular-table/js/angular-table.min.js"></script>
-    <script src="http://samu.github.io/angular-table/js/angular-tabs.min.js"></script>
 
     <script src="../dist/js/angularjs-dropdown-multiselect.min.js"></script>
 
@@ -86,19 +84,24 @@
 
     <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
 
-    <script src="../js/areas.create.js"></script>
-    <script src="../js/areas.show.js"></script>
+    <script src="../js/Areas/areas.create.js"></script>
+    <script src="../js/Areas/areas.show.js"></script>
 
-    <script src="../js/teams.create.js"></script>
-    <script src="../js/teams.show.js"></script>
-    <script src="../js/teams.update.js"></script>
+    <script src="../js/Teams/teams.create.js"></script>
+    <script src="../js/Teams/teams.show.js"></script>
+    <script src="../js/Teams/teams.update.js"></script>
+    <script src="../js/Teams/teams.modal.show.account.js"></script>
+    <script src="../js/Teams/teams.modal.show.delete.yesno.js"></script>
 
-    <script src="../js/orders.show.js"></script>
-    <script src="../js/orders.create.js"></script>
-    <script src="../js/accounts.show.js"></script>
-    <script src="../js/accounts.create.js"></script>
-    <script src="../js/accounts.update.js"></script>
-    <script src="../js/User/login.js"></script>
+    <script src="../js/Orders/orders.show.js"></script>
+    <script src="../js/Orders/orders.create.js"></script>
+    <script src="../js/Accounts/accounts.show.js"></script>
+    <script src="../js/Accounts/accounts.create.js"></script>
+    <script src="../js/Accounts/accounts.update.js"></script>
+
+    <script src="../js/PackageTypes/packagetypes.show.js"></script>
+    <script src="../js/PackageTypes/packagetypes.create.js"></script>
+    <script src="../js/PackageTypes/packagetypes.update.js"></script>
 
 </head>
 
@@ -355,6 +358,9 @@
                     </li>
                     <li>
                         <a href="#addtabledsdonhang"><i class="fa fa-dashboard fa-fw"></i> Thêm danh sách đơn hàng</a>
+                    </li>
+                    <li>
+                        <a href="#packagetypesshow"><i class="fa fa-dashboard fa-fw"></i> Quản lý loại gói hàng</a>
                     </li>
                     <li>
                         <a href="#accountsshow"><i class="fa fa-dashboard fa-fw"></i> Quản lý tài khoản</a>
