--- a/Client Web/webMshipper/pages/Accounts/Create.html
+++ b/Client Web/webMshipper/pages/Accounts/Create.html
@@ -1,101 +1,132 @@
 <div id="wrapper">
     <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Thêm tài khoản mới</h1>
+        <div id="AccountCreate">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Thêm tài khoản mới</h1>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Thêm dữ liệu
-                    </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Số điện thoại</label>
-                                    <input ng-model="phoneNumber" class="form-control" placeholder="0968899988">
-                                </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Thêm dữ liệu
+                        </div>
+                        <div class="panel-body">
 
-                                <div class="form-group">
-                                    <label>Tên</label>
-                                    <input ng-model="firstName" class="form-control" placeholder="An">
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Họ và tên phụ</label>
-                                    <input ng-model="lastName" class="form-control" placeholder="Đặng Văn">
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Ngày sinh</label>
-                                    <input readonly id="birthday" type="text" class="form-control datepicker"
-                                           data-date-format="dd/mm/yyyy" placeholder="dd/mm/yyyy">
-                                </div>
-                            </div>
-
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Số chứng minh</label>
-                                    <input ng-model="identityNumber" class="form-control" placeholder="1521333558">
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Địa chỉ</label>
-                                    <input ng-model="address" class="form-control"
-                                           placeholder="150A Nguyễn Thị Nhỏ,...">
-                                </div>
-
-                                <div id="emailForm" class="form-group">
-                                    <label>Email</label>
-                                    <input ng-model="email" class="form-control" placeholder="dangvan@gmail.com">
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="form-group col-sm-6" style="padding: 0; padding-right: 5px">
-                                            <label>Giới tính</label>
-                                            <ui-select ng-model="selectedGender.selected" theme="bootstrap">
-                                                <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
-                                                </ui-select-match>
-                                                <ui-select-choices
-                                                        repeat="item as item in gender | filter: $select.search">
-                                                    <div ng-bind-html="item.name | highlight: $select.search"></div>
-                                                </ui-select-choices>
-                                            </ui-select>
-
-                                        </div>
-
-                                        <div class="form-group col-sm-6" style="padding: 0; padding-left: 5px">
-                                            <label>Vai trò</label>
-                                            <ui-select ng-model="selectedRole.selected" theme="bootstrap">
-                                                <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
-                                                </ui-select-match>
-                                                <ui-select-choices
-                                                        repeat="item as item in role | filter: $select.search">
-                                                    <div ng-bind-html="item.name | highlight: $select.search"></div>
-                                                </ui-select-choices>
-                                            </ui-select>
-                                        </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label>Vai trò</label>
+                                        <ui-select ng-model="selectedRole.selected" theme="bootstrap" on-select = "selectRole($item)">
+                                            <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
+                                            </ui-select-match>
+                                            <ui-select-choices
+                                                    repeat="item as item in role | filter: $select.search">
+                                                <div ng-bind-html="item.name | highlight: $select.search"></div>
+                                            </ui-select-choices>
+                                        </ui-select>
                                     </div>
                                 </div>
-                                <br>
-                                <br>
-                                <div style="float: right">
-                                    <button type="submit" ng-click="submit()" class="btn btn-outline btn-primary">Lưu
-                                        thông tin
-                                    </button>
-                                </div>
                             </div>
-                            <!-- /.col-lg-6 (nested) -->
+
+                            <div class="row">
+                                <div class="col-lg-6">
+
+                                    <div class="form-group">
+                                        <label>Số điện thoại</label>
+                                        <input ng-model="phoneNumber" class="form-control" placeholder="0968899988">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Họ và Tên</label>
+                                        <input ng-model="name" class="form-control" placeholder="An">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Ngày sinh</label>
+                                        <input readonly id="birthday" type="text" class="form-control datepicker"
+                                               data-date-format="dd/mm/yyyy" placeholder="dd/mm/yyyy">
+                                    </div>
+
+                                    <div id="inputVehicle" class="form-group">
+                                        <label>Bằng Lái Xe</label>
+                                        <input ng-model="vehicleLicense" class="form-control" placeholder="An">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Số chứng minh</label>
+                                        <input ng-model="identityNumber" class="form-control" placeholder="1521333558">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Địa chỉ</label>
+                                        <input ng-model="address" class="form-control"
+                                               placeholder="150A Nguyễn Thị Nhỏ,...">
+                                    </div>
+
+                                    <div id="deliveryAddress" class="form-group">
+                                        <label>Địa chỉ giao hàng</label>
+                                        <input ng-model="deliveryAddress" class="form-control"
+                                               placeholder="150A Nguyễn Thị Nhỏ,...">
+                                    </div>
+
+                                    <div id="emailForm" class="form-group">
+                                        <label>Email</label>
+                                        <input ng-model="email" class="form-control" placeholder="dangvan@gmail.com">
+                                    </div>
+
+                                    <div id="company" class="form-group">
+                                        <label>Tên công ty</label>
+                                        <input ng-model="company" class="form-control" placeholder="dangvan@gmail.com">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Giới tính</label>
+                                        <ui-select ng-model="selectedGender.selected" theme="bootstrap">
+                                            <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
+                                            </ui-select-match>
+                                            <ui-select-choices
+                                                    repeat="item as item in gender | filter: $select.search">
+                                                <div ng-bind-html="item.name | highlight: $select.search"></div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                    </div>
+
+                                    <div style="float: right">
+                                        <button type="submit" ng-click="submit()" class="btn btn-outline btn-primary">Lưu
+                                            thông tin
+                                        </button>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label>Chọn Hình Ảnh</label>
+                                        <input type="file" id="fileButton"/>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <img src="{{srcImage.src}}" style="width:auto;height:150px;">
+                                    </div>
+
+                                    <div id="mapDeliveryPoint">
+                                        <ng-map center="{{ deliveryAddress }}" zoom="10" scrollwheel="false" on-click="addMarkerAndPath()">
+                                            <marker position="{{deliveryAddress}}" title="{{deliveryAddress}}"></marker>
+                                        </ng-map>
+                                    </div>
+
+                                </div>
+                                <!-- /.col-lg-6 (nested) -->
+                            </div>
+                            <!-- /.row (nested) -->
                         </div>
-                        <!-- /.row (nested) -->
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 </div>
