--- a/Client Web/webMshipper/pages/Accounts/Show.html
+++ b/Client Web/webMshipper/pages/Accounts/Show.html
@@ -67,42 +67,48 @@
                                         </a>
                                     </th>
                                     <th>
-                                        <a href="#" ng-click="sortType = '_phone'; sortReverse = !sortReverse">
+                                        <a href="#" ng-click="sortType = '_id_area'; sortReverse = !sortReverse">
                                             Mã
-                                            <span ng-show="sortType == '_phone' && !sortReverse"
+                                            <span ng-show="sortType == '_id_area' && !sortReverse"
                                                   class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_phone' && sortReverse"
+                                            <span ng-show="sortType == '_id_area' && sortReverse"
                                                   class="fa fa-caret-up"></span>
                                         </a>
                                     </th>
                                     <th>
-                                        <a href="#" ng-click="sortType = '_first_name'; sortReverse = !sortReverse">
+                                        <a href="#" ng-click="sortType = '_name_area'; sortReverse = !sortReverse">
+                                            Tên
+                                            <span ng-show="sortType == '_name_area' && !sortReverse"
+                                                  class="fa fa-caret-down"></span>
+                                            <span ng-show="sortType == '_name_area' && sortReverse"
+                                                  class="fa fa-caret-up"></span>
+                                        </a>
+                                    </th>
+                                    <th>
+                                        <a href="#" ng-click="sortType = '_address'; sortReverse = !sortReverse">
                                             Địa Chỉ
-                                            <span ng-show="sortType == '_first_name' && !sortReverse"
+                                            <span ng-show="sortType == '_address' && !sortReverse"
                                                   class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_first_name' && sortReverse"
+                                            <span ng-show="sortType == '_address' && sortReverse"
                                                   class="fa fa-caret-up"></span>
                                         </a>
                                     </th>
                                     <th>
-                                        <a href="#" ng-click="sortType = '_permission'; sortReverse = !sortReverse">
+                                        <a href="#">
                                             Tọa độ
-                                            <span ng-show="sortType == '_permission' && !sortReverse"
-                                                  class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_permission' && sortReverse"
-                                                  class="fa fa-caret-up"></span>
                                         </a>
                                     </th>
                                     <th>Ghi Chú</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr ng-repeat="x in accounts | orderBy:sortType:sortReverse | filter:searchFish">
-                                    <td>{{x.stt}}</td>
-                                    <td><a href="#/accountscreate/{{x._phone}}">{{x._phone}}</a></td>
-                                    <td>{{x._last_name}} {{x._first_name}}</td>
-                                    <td>{{x._permission}}</td>
-                                    <td>ghi chú</td>
+                                <tr ng-repeat="x in areas | orderBy:sortType:sortReverse | filter:searchFish">
+                                    <td class="center">{{x.stt}}</td>
+                                    <td><a href="" ng-click="updateArea(x)">{{x._id_area}}</a></td>
+                                    <td>{{x._name_area}}</td>
+                                    <td>{{x._address}}</td>
+                                    <td><button ng-click="viewMaps(x)">Xem</button></td>
+                                    <td>{{x._note}}</td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -125,38 +131,71 @@
                         <div class="col-xs-6">
                             <div class="form-group">
                                 <label>Mã Địa Điểm</label>
-                                <input ng-model="phoneNumber" class="form-control" placeholder="0968899988">
+                                <input ng-model="idArea" class="form-control" placeholder="ADM">
                             </div>
 
                             <div class="form-group">
                                 <label>Địa chỉ</label>
-                                <input ng-model="address" class="form-control" placeholder="0968899988">
+                                <input ng-model="address" class="form-control" placeholder="152 Tô Hiến Thành, Phường 15, Quận 11, Hồ Chí Minh">
                             </div>
                         </div>
 
                         <div class="col-xs-6">
                             <div class="form-group">
                                 <label>Tên Địa Điểm</label>
-                                <input ng-model="firstName" class="form-control" placeholder="An">
+                                <input ng-model="nameArea" class="form-control" placeholder="Co.op Tô Hiến Thành">
                             </div>
 
                             <div class="form-group">
-                                <label>Tọa Độ</label>
-                                <input ng-model="firstName" class="form-control" placeholder="An">
+                                <label>Ghi Chú</label>
+                                <input ng-model="note" class="form-control" placeholder="...">
                             </div>
                         </div>
                     </div>
 
                     <div class="row panel-body" id="mapAccountAddress">
                         <button ng-click="removePoint()">Xóa Điểm</button>
-                        <button ng-click="removePoint()">Lập vùng</button>
-                        <ng-map center="{{ address }}" zoom="10" scrollwheel="false" zoom-to-include-markers="auto" on-click="addMarkerAndPath()">
+                        <button ng-click="createZone()">Lập vùng</button>
+                        <ng-map center="{{ address }}" zoom="10" scrollwheel="false" on-click="addMarkerAndPath()">
                             <marker position="{{address}}" title="{{address}}"></marker>
                             <shape name="polyline" id="foo"
                                    path="{{path}}"
                                    stroke-color="#FF0000"
                                    stroke-opacity="1.0"
-                                   stroke-weight="3">
+                                   stroke-weight="0">
+                            </shape>
+                            <shape name="polygon"
+                                   paths="{{path1}}"
+                                   stroke-color="#FF0000"
+                                   stroke-opacity="0.8"
+                                   stroke-weight="2"
+                                   fill-color="#FF0000"
+                                   fill-opacity="0.35">
+                            </shape>
+                        </ng-map>
+                    </div>
+                </div>
+            </div>
+
+            <!--textBox overlay-->
+            <div class="overlay" id="overlay-showmore2" style="display: block;">
+                <div class="model glx-container" style="margin-top: -166.5px;">
+                    <div class="row closeOver">
+                        <img ng-click="closeShowMore2()" src="../assets/img/icons/xController.png">
+                    </div>
+                    <div class="row core">
+                        <p>Bản đồ</p>
+                    </div>
+
+                    <div class="row panel-body" id="mapAccountAddress2">
+                        <ng-map center="{{ address }}" zoom="16" scrollwheel="false">
+                            <shape name="polygon"
+                                   paths="{{path1}}"
+                                   stroke-color="#FF0000"
+                                   stroke-opacity="0.8"
+                                   stroke-weight="2"
+                                   fill-color="#FF0000"
+                                   fill-opacity="0.35">
                             </shape>
                         </ng-map>
                     </div>
@@ -233,7 +272,7 @@
                                 <tr ng-repeat="x in accounts | orderBy:sortType:sortReverse | filter:searchFish">
                                     <td>{{x.stt}}</td>
                                     <td><a href="#/accountscreate/{{x._phone}}">{{x._phone}}</a></td>
-                                    <td>{{x._last_name}} {{x._first_name}}</td>
+                                    <td>{{x._name}}</td>
                                     <td>{{x._permission}}</td>
                                     <td>
                                         <button ng-click="showMore(x)">Chi Tiết</button>
