--- a/Client Web/webMshipper/pages/Accounts/Create.n.html
+++ b/Client Web/webMshipper/pages/Accounts/Create.n.html
@@ -47,6 +47,33 @@
                 </div>
             </div>
 
+            <!--textBox overlay-->
+            <div ng-if="showImage" class="overlay" style="display: block;">
+                <div class="model glx-container" style="margin-top: -166.5px;">
+                    <div class="row closeOver">
+                        <img ng-click="closeShowImage()" src="../assets/img/icons/xController.png">
+                    </div>
+                    <div class="row core">
+                        <p>Nhập địa chỉ giao hàng</p>
+                    </div>
+
+                    <div class="row panel-body">
+                        <button ng-click="createImage()">Xong</button>
+
+                        <div class="form-group">
+                            <label>Chọn Hình Ảnh</label>
+                            <input id="fileButtonImage" type="file" ng-click="uploadImage()" custom-on-change="uploadFile" style="display: none;">
+                            <button style="width: 150px" type="button" class="btn btn-primary" onclick="document.getElementById('fileButtonImage').click();">Nhập tập tin</button>
+                        </div>
+
+                        <div class="form-group">
+                            <img src="{{srcImage}}" style="width:auto;height:150px;">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
@@ -113,6 +140,7 @@
                                     <th>Email</th>
                                     <th ng-if="b_company">Công Ty</th>
                                     <th>Giới Tính</th>
+                                    <th>Ảnh</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -128,6 +156,7 @@
                                     <td>{{x.Email}}</td>
                                     <td ng-if="b_company">{{x.CompanyName}}</td>
                                     <td>{{x.Gender}}</td>
+                                    <td><button ng-click="showImageButton(x)">Xem</button></td>
                                 </tr>
                                 </tbody>
                             </table>
