--- a/Client Web/webMshipper/pages/Accounts/Show.html
+++ b/Client Web/webMshipper/pages/Accounts/Show.html
@@ -50,154 +50,54 @@
                         </div>
                     </div>
 
-                    <div id="tableCustomer" class="row" style="padding: 10px">
+                    <div id="showMap" class="row" style="padding: 10px">
                         <div class="panel-body">
-                            <button ng-click="showAddDelivery()">Thêm Địa Điểm</button>
+                            <div>
+                                <div class="col-xs-6" style="padding-left: 0">
+                                    <ui-select ng-model="selectedTypeSelect.selected" theme="bootstrap"
+                                               on-select="selectTypeSelect($item)">
+                                        <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
+                                        </ui-select-match>
+                                        <ui-select-choices
+                                                repeat="item as item in typeSelects | filter: $select.search">
+                                            <div ng-bind-html="item.name | highlight: $select.search"></div>
+                                        </ui-select-choices>
+                                    </ui-select>
+                                </div>
 
-                            <table width="100%" class="table table-bordered table-hover">
-                                <thead>
-                                <tr>
-                                    <th>
-                                        <a href="#" ng-click="sortType = 'stt'; sortReverse = !sortReverse">
-                                            STT
-                                            <span ng-show="sortType == 'stt' && !sortReverse"
-                                                  class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == 'stt' && sortReverse"
-                                                  class="fa fa-caret-up"></span>
-                                        </a>
-                                    </th>
-                                    <th>
-                                        <a href="#" ng-click="sortType = '_id_area'; sortReverse = !sortReverse">
-                                            Mã
-                                            <span ng-show="sortType == '_id_area' && !sortReverse"
-                                                  class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_id_area' && sortReverse"
-                                                  class="fa fa-caret-up"></span>
-                                        </a>
-                                    </th>
-                                    <th>
-                                        <a href="#" ng-click="sortType = '_name_area'; sortReverse = !sortReverse">
-                                            Tên
-                                            <span ng-show="sortType == '_name_area' && !sortReverse"
-                                                  class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_name_area' && sortReverse"
-                                                  class="fa fa-caret-up"></span>
-                                        </a>
-                                    </th>
-                                    <th>
-                                        <a href="#" ng-click="sortType = '_address'; sortReverse = !sortReverse">
-                                            Địa Chỉ
-                                            <span ng-show="sortType == '_address' && !sortReverse"
-                                                  class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_address' && sortReverse"
-                                                  class="fa fa-caret-up"></span>
-                                        </a>
-                                    </th>
-                                    <th>
-                                        <a href="#">
-                                            Tọa độ
-                                        </a>
-                                    </th>
-                                    <th>Ghi Chú</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr ng-repeat="x in areas | orderBy:sortType:sortReverse | filter:searchFish">
-                                    <td class="center">{{x.stt}}</td>
-                                    <td><a href="" ng-click="updateArea(x)">{{x._id_area}}</a></td>
-                                    <td>{{x._name_area}}</td>
-                                    <td>{{x._address}}</td>
-                                    <td><button ng-click="viewMaps(x)">Xem</button></td>
-                                    <td>{{x._note}}</td>
-                                </tr>
-                                </tbody>
-                            </table>
+                            </div>
+
+                            <ng-map center="{{ mapAddressCenter }}" zoom="14" scrollwheel="false"
+                                    style="padding-bottom: 40px">
+                                <marker position="{{mapAddress}}"></marker>
+                                <shape name="polygon"
+                                       paths="{{path1}}"
+                                       stroke-color="#FF0000"
+                                       stroke-opacity="0.8"
+                                       stroke-weight="2"
+                                       fill-color="#FF0000"
+                                       fill-opacity="0.35">
+                                </shape>
+                            </ng-map>
                         </div>
                     </div>
-
                 </div>
             </div>
 
             <!--textBox overlay-->
-            <div class="overlay" id="overlay-showmore1" style="display: block;">
+            <div class="overlay" ng-if="showRemoveYN" style="display: block;">
                 <div class="model glx-container" style="margin-top: -166.5px;">
                     <div class="row closeOver">
-                        <img ng-click="closeShowMore1()" src="../assets/img/icons/xController.png">
+                        <img ng-click="closeShowMore()" src="../assets/img/icons/xController.png">
                     </div>
                     <div class="row core">
-                        <p>Nhập địa chỉ giao hàng</p>
+                        <p>Bạn có chắc chắn xóa tài khoản này không?</p>
                     </div>
                     <div class="row panel-body">
                         <div class="col-xs-6">
-                            <div class="form-group">
-                                <label>Mã Địa Điểm</label>
-                                <input ng-model="idArea" class="form-control" placeholder="ADM">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Địa chỉ</label>
-                                <input ng-model="address" class="form-control" placeholder="152 Tô Hiến Thành, Phường 15, Quận 11, Hồ Chí Minh">
-                            </div>
+                            <button ng-click="clickYesRemove()">Có</button>
+                            <button ng-click="clickNoRemove()">Không</button>
                         </div>
-
-                        <div class="col-xs-6">
-                            <div class="form-group">
-                                <label>Tên Địa Điểm</label>
-                                <input ng-model="nameArea" class="form-control" placeholder="Co.op Tô Hiến Thành">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Ghi Chú</label>
-                                <input ng-model="note" class="form-control" placeholder="...">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row panel-body" id="mapAccountAddress">
-                        <button ng-click="removePoint()">Xóa Điểm</button>
-                        <button ng-click="createZone()">Lập vùng</button>
-                        <ng-map center="{{ address }}" zoom="10" scrollwheel="false" on-click="addMarkerAndPath()">
-                            <marker position="{{address}}" title="{{address}}"></marker>
-                            <shape name="polyline" id="foo"
-                                   path="{{path}}"
-                                   stroke-color="#FF0000"
-                                   stroke-opacity="1.0"
-                                   stroke-weight="0">
-                            </shape>
-                            <shape name="polygon"
-                                   paths="{{path1}}"
-                                   stroke-color="#FF0000"
-                                   stroke-opacity="0.8"
-                                   stroke-weight="2"
-                                   fill-color="#FF0000"
-                                   fill-opacity="0.35">
-                            </shape>
-                        </ng-map>
-                    </div>
-                </div>
-            </div>
-
-            <!--textBox overlay-->
-            <div class="overlay" id="overlay-showmore2" style="display: block;">
-                <div class="model glx-container" style="margin-top: -166.5px;">
-                    <div class="row closeOver">
-                        <img ng-click="closeShowMore2()" src="../assets/img/icons/xController.png">
-                    </div>
-                    <div class="row core">
-                        <p>Bản đồ</p>
-                    </div>
-
-                    <div class="row panel-body" id="mapAccountAddress2">
-                        <ng-map center="{{ address }}" zoom="16" scrollwheel="false">
-                            <shape name="polygon"
-                                   paths="{{path1}}"
-                                   stroke-color="#FF0000"
-                                   stroke-opacity="0.8"
-                                   stroke-weight="2"
-                                   fill-color="#FF0000"
-                                   fill-opacity="0.35">
-                            </shape>
-                        </ng-map>
                     </div>
                 </div>
             </div>
@@ -219,8 +119,16 @@
 
                         <div>
                             <div class="col-lg-12">
-                                <button ng-click="addAcount()" type="button" class="btn btn-primary">Thêm tài khoản
-                                </button>
+                                <div class="col-xs-4" style="padding-left: 5px">
+                                    <ui-select ng-model="selectedRole.selected" theme="bootstrap" on-select = "selectRole($item)">
+                                        <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
+                                        </ui-select-match>
+                                        <ui-select-choices
+                                                repeat="item as item in role | filter: $select.search">
+                                            <div ng-bind-html="item.name | highlight: $select.search"></div>
+                                        </ui-select-choices>
+                                    </ui-select>
+                                </div>
                             </div>
                         </div>
                         <br>
@@ -248,11 +156,11 @@
                                         </a>
                                     </th>
                                     <th>
-                                        <a href="#" ng-click="sortType = '_first_name'; sortReverse = !sortReverse">
+                                        <a href="#" ng-click="sortType = '_name'; sortReverse = !sortReverse">
                                             Họ Và Tên
-                                            <span ng-show="sortType == '_first_name' && !sortReverse"
+                                            <span ng-show="sortType == '_name' && !sortReverse"
                                                   class="fa fa-caret-down"></span>
-                                            <span ng-show="sortType == '_first_name' && sortReverse"
+                                            <span ng-show="sortType == '_name' && sortReverse"
                                                   class="fa fa-caret-up"></span>
                                         </a>
                                     </th>
@@ -266,16 +174,20 @@
                                         </a>
                                     </th>
                                     <th>Chi Tiết</th>
+                                    <th>Xóa Tài Khoản</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr ng-repeat="x in accounts | orderBy:sortType:sortReverse | filter:searchFish">
-                                    <td>{{x.stt}}</td>
+                                <tr ng-repeat="x in accounts | orderBy:sortType:sortReverse | filter:{ _permission: selectedRole.selected.name }">
+                                    <td>{{$index + 1}}</td>
                                     <td><a href="#/accountscreate/{{x._phone}}">{{x._phone}}</a></td>
                                     <td>{{x._name}}</td>
                                     <td>{{x._permission}}</td>
                                     <td>
                                         <button ng-click="showMore(x)">Chi Tiết</button>
+                                    </td>
+                                    <td>
+                                        <button ng-click="removeAccount(x)">Xóa</button>
                                     </td>
                                 </tr>
                                 </tbody>
